# it-asset-manager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AWS_DEPLOYMENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_CSV_FEATURES_GUIDE.md  CONTRIBUTING.md  CSV_BULK_UPLOAD_GUIDE.md  CSV_FUNCTIONALITY_GUIDE.md  CSV_IMPLEMENTATION_SUMMARY.md  DASHBOARD_TROUBLESHOOTING.md  DEPLOYMENT_FIXED.md  DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOYMENT.md  DOCKER_IMPLEMENTATION_SUMMARY.md  Dockerfile  Dockerfile.dev-tools  ENHANCED_FEATURES.md  FINAL_CSV_IMPLEMENTATION.md  FINAL_STATUS.md  GITHUB_PUSH_SUMMARY.md  GITHUB_SETUP.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  LICENSE  LINKEDIN_POST.md  LOCAL_INSTALLATION_GUIDE.md  Makefile  PASSWORD_MANAGEMENT.md  PRODUCTION_DEPLOYMENT.md  PROJECT_ORGANIZATION_SUMMARY.md  PROJECT_SUMMARY.md  PR_SUMMARY_FOR_MAIN.md  PULL_REQUEST_SUMMARY.md  QUICKSTART.md  README.md  REPOSITORY_LINKS_UPDATED.md  RESTRUCTURE_SUMMARY.md  (+30 more)
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci-cd.yml  dependency-update.yml  docker-security.yml
config/: __init__.py
docker/nginx/: dev.conf  prod.conf
docker/postgres/: init.sql
docker/scripts/: backup.sh
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DOCKER.md
docs/deployment/: AWS_DEPLOYMENT.md
it_asset_manager/core/: __init__.py  app.py  auth.py  database.py
it_asset_manager/models/: __init__.py  access.py  asset.py  user.py
it_asset_manager/routes/: __init__.py  (+5 more)
templates/: app_access.html  assets.html  bulk_upload_app_access.html  bulk_upload_assets.html  bulk_upload_github_access.html  dashboard.html  edit_asset.html  forgot_password.html  github_access.html  reset_instructions.html  reset_password.html
tests/: conftest.py
(+31 files in other folders)
