[metadata]
name = it-asset-manager
version = 2.0.0
description = Professional IT Asset Management System
long_description = file: README.md
long_description_content_type = text/markdown
author = Deepak Nemade
author_email = deepak@example.com
url = https://github.com/deepaknemade/it-asset-manager
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Systems Administration

[options]
packages = find:
python_requires = >=3.7
install_requires =
    Flask>=2.3.0
    Flask-SQLAlchemy>=3.0.0
    Flask-Login>=0.6.0
    Werkzeug>=2.3.0

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-flask>=1.3.0
    pytest-cov>=4.1.0
    black>=23.11.0
    flake8>=6.1.0
    mypy>=1.7.0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    venv,
    .venv,
    instance,
    migrations

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[mypy-flask_sqlalchemy.*]
ignore_missing_imports = True

[mypy-flask_login.*]
ignore_missing_imports = True
